--- a/test.html
+++ b/test.html
@@ -19,10 +19,50 @@
         beacon711: { x: 120.64174093167196, y: 24.171230755252594 },
       };
       const polygonPoints = [
-        [beaconLatLon.beacon666.x, beaconLatLon.beacon666.y],
-        [beaconLatLon.beacon333.x, beaconLatLon.beacon333.y],
-        [beaconLatLon.beacon711.x, beaconLatLon.beacon711.y],
+        [beaconLatLon.beacon666.x, beaconLatLon.beacon666.y, 27],
+        [beaconLatLon.beacon333.x, beaconLatLon.beacon333.y, 27],
+        [beaconLatLon.beacon711.x, beaconLatLon.beacon711.y, 27],
       ];
+      function _XYZ2BLH(xyz1) {
+        var a = 6378135;
+        var e2 = 0.006693421622966; //第一偏心率平方值
+        var X = xyz1.X;
+        var Y = xyz1.Y;
+        var Z = xyz1.Z;
+        var L = Math.atan(Y / X) * 180 / Math.PI;
+        var B = Math.atan(Z / Math.sqrt(X * X + Y * Y));
+        while (true) {
+          //迭代计算
+          var N = a / Math.sqrt(1 - e2 * Math.sin(B) * Math.sin(B));
+          var tempB = Math.atan(
+            (N * e2 * Math.sin(B) + Z) / Math.sqrt(X * X + Y * Y)
+          );
+          B = Math.atan(
+            (Z + N * e2 * Math.sin(tempB)) / Math.sqrt(X * X + Y * Y)
+          );
+          if (tempB == B) {
+            break;
+          }
+        }
+        var H = Z / Math.sin(B) - N * (1 - e2);
+        B = B * 180 / Math.PI;
+        var resultObj = {};
+        resultObj.L = L;
+        resultObj.B = 180-B;
+        resultObj.H = H;
+        if (resultObj.B < 0) {
+          resultObj.B = resultObj.B + 180;
+        }
+        if (resultObj.L < 0) {
+          resultObj.L = resultObj.L + 180;
+        }
+        return resultObj;
+      }
+      const xyz1 = {
+        X: -2973108.1352892383,
+        Y: -1334366.8293782612,
+        Z: 5464405.507574263,
+      };
       function blhtoXYZ(polygonPoints) {
         function _BLH2XYZ(blhObj) {
           //将大地坐标喜欢换为空间直角坐标系
@@ -64,7 +104,6 @@
         var arrlen = polygonPoints.length;
 
         for (var i = 0; i < arrlen; i++) {
-          // console.log(polygonPoints[i])
           var temp = polygonPoints[i].push(0);
           var blhobj = {
             b: polygonPoints[i][0],
@@ -72,7 +111,7 @@
             h: polygonPoints[i][2],
           };
           var xyz = _BLH2XYZ(blhobj);
-          var litarr = [xyz.X, xyz.Y];
+          var litarr = [xyz.X, xyz.Y, xyz.Z];
           newPolygonsArray.push(litarr);
         }
         return newPolygonsArray;
@@ -118,20 +157,34 @@
         const atwainvat = math.multiply(atwainv, math.transpose(a)); //ata inv*at
         const atwainvatw = math.multiply(atwainvat, w);
         const atwainvatwb = math.multiply(atwainvatw, b);
-        const adjustpoint = [
-          beaconLatLon.last.x - parseFloat(atwainvatwb[0]),
-          beaconLatLon.last.y - parseFloat(atwainvatwb[1]),
-        ];
+        const adjustpoint = {
+          X:beaconLatLon.last.x - parseFloat(atwainvatwb[0]),
+          Y:beaconLatLon.last.y - parseFloat(atwainvatwb[1]),
+          Z:beaconLatLon.last.z
+        };
         return adjustpoint;
       }
-      
+
       const beaconLatLondata = {
-        first: { x: blhtoXYZ(polygonPoints)[0][0], y: blhtoXYZ(polygonPoints)[0][1] },
-        second: { x: blhtoXYZ(polygonPoints)[1][0], y: blhtoXYZ(polygonPoints)[1][1]},
-        last: {x: blhtoXYZ(polygonPoints)[2][0], y: blhtoXYZ(polygonPoints)[2][1] }
+        first: {
+          x: blhtoXYZ(polygonPoints)[0][0],
+          y: blhtoXYZ(polygonPoints)[0][1],
+          z: blhtoXYZ(polygonPoints)[0][2],
+        },
+        second: {
+          x: blhtoXYZ(polygonPoints)[1][0],
+          y: blhtoXYZ(polygonPoints)[1][1],
+          z: blhtoXYZ(polygonPoints)[1][2],
+        },
+        last: {
+          x: blhtoXYZ(polygonPoints)[2][0],
+          y: blhtoXYZ(polygonPoints)[2][1],
+          z: blhtoXYZ(polygonPoints)[2][2],
+        },
       };
       const delta = weightedPoint(beaconLatLondata, beaconAccuracy);
-      console.log(delta);
+      const result = _XYZ2BLH(delta)
+      console.log(result)
     </script>
   </body>
 </html>
